hid 'first train' column

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
 #headingContainer {
 	text-align:center;
 }
+
+/*#mainTable tr > *:nth-child(5) {
+    display: none;
+}*/
+
+#train1 {
+	display:none;
+}
